--- a/force-app/main/default/pages/AppPage.page
+++ b/force-app/main/default/pages/AppPage.page
@@ -3,11 +3,11 @@
     <div id="app"></div>
     <script>
         console.log('Hello World');
-        // $Lightning.use("c:clearapp", function () {
-        //     $Lightning.createComponent("c:stepAura", {}, "app", function (cmp) {
-        //         console.log("Component is created!");
-        //         console.log(cmp);
-        //     });
-        // });
+        $Lightning.use("c:appTemplate", function () {
+            // $Lightning.createComponent("c:stepAura", {}, "app", function (cmp) {
+            //     console.log("Component is created!");
+            //     console.log(cmp);
+            // });
+        });
     </script>
 </apex:page>
