--- a/force-app/main/default/pages/AppPage.page
+++ b/force-app/main/default/pages/AppPage.page
@@ -1,21 +1,22 @@
-<apex:page standardStylesheets="false" sidebar="false" showHeader="false" controller="AppController">
-    <apex:includeLightning />
-    <style>
-        *{
-            margin: 0;
-            padding: 0;
-        }
-        html, body, #app{
-            height:100%;
-        }
-
-    </style>
-    <div id="app"></div>
-    <script>
-        $Lightning.use("c:appTemplate", function () {
-            $Lightning.createComponent("c:chelseaTemplate", {step:"{!step}"}, "app", function (cmp) {
-                console.log("Ready to work!");
+<apex:page standardStylesheets="false" sidebar="false" showHeader="false" controller="AppController" applyHtmlTag="false">
+    <html>
+    <head>
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+        <title>Fleetcor</title>
+        <meta name="description" content="Fleetcor upgrade"/>
+        <apex:stylesheet value="{!$Resource.reset}" />
+        <apex:includeLightning />
+    </head>
+    <body>
+        <div id="app"></div>
+        <script>
+            $Lightning.use("c:appTemplate", function () {
+                $Lightning.createComponent("c:templateWrapper", { args: "{!step}" }, "app", function (cmp) {
+                    console.log("Ready to work!");
+                });
             });
-        });
-    </script>
+        </script>
+    </body>
+    </html>
 </apex:page>
