--- a/force-app/main/default/lwc/fcLoader/fcLoader.css
+++ b/force-app/main/default/lwc/fcLoader/fcLoader.css
@@ -4,15 +4,9 @@
 	align-items: center;
 	justify-content: center;
 	width: 100%;
-	height: 300px;
-	position: absolute;
+	height: 100%;
+	position: fixed;
 	left: 0;
 	top: 0;
 	z-index: 1000;
-}
-
-@media (min-width:1280px){
-	.fc-loader{
-		height: 600px;
-	}
 }
